@@ -274,13 +274,15 @@
       (setq props (plist-put props :background (face-background face))))
     (apply 'create-image file type data-p props)))
 
-(defun gnus-put-image (glyph &optional string category)
-  (let ((point (point)))
-    (insert-image glyph (or string " "))
-    (put-text-property point (point) 'gnus-image-category category)
-    (unless string
-      (put-text-property (1- (point)) (point)
-			 'gnus-image-text-deletable t))
+(defun gnus-put-image (glyph &optional string category point)
+  (let ((point (or point (point))))
+    (save-excursion
+      (goto-char point)
+      (put-image glyph point)
+      (put-text-property point (point) 'gnus-image-category category)
+      (unless string
+	(put-text-property (1- (point)) (point)
+			   'gnus-image-text-deletable t)))
     glyph))
 
 (defun gnus-remove-image (image &optional category)
